--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,16 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:2.11"
     kapt "com.google.dagger:dagger-android-processor:2.11"
 
+    //rx
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'io.reactivex:rxjava:1.3.0'
+    compile 'io.reactivex:rxkotlin:1.0.0'
+    compile 'com.trello:rxlifecycle:0.5.0'
+    compile 'com.trello:rxlifecycle-components:0.5.0'
+
+    // permissions
+    compile 'io.vrinda.kotlinpermissions:kotlinpermissions:1.1'
+
     // databinding
     kapt 'com.android.databinding:compiler:2.3.2'
 
