--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,6 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "rrozanski.wisiszmihajs"
         minSdkVersion 19
@@ -34,34 +33,33 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:26.0.1'
-    implementation 'com.android.support:design:26.0.1'
-    implementation 'com.android.support:cardview-v7:26.0.1'
-    implementation 'com.android.support:recyclerview-v7:26.0.1'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
 
     // dagger
-    compile "com.google.dagger:dagger:2.11"
-    compile "com.google.dagger:dagger-android:2.11"
-    compile "com.google.dagger:dagger-android-support:2.11"
+    implementation "com.google.dagger:dagger:2.11"
+    implementation "com.google.dagger:dagger-android:2.11"
+    implementation "com.google.dagger:dagger-android-support:2.11"
     kapt "com.google.dagger:dagger-compiler:2.11"
     kapt "com.google.dagger:dagger-android-processor:2.11"
 
     //rx
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex:rxjava:1.3.0'
-    compile 'io.reactivex:rxkotlin:1.0.0'
-    compile 'com.trello:rxlifecycle:0.5.0'
-    compile 'com.trello:rxlifecycle-components:0.5.0'
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'io.reactivex:rxjava:1.3.0'
+    implementation 'io.reactivex:rxkotlin:1.0.0'
+    implementation 'com.trello:rxlifecycle:0.5.0'
+    implementation 'com.trello:rxlifecycle-components:0.5.0'
 
     // permissions
-    compile 'io.vrinda.kotlinpermissions:kotlinpermissions:1.1'
+    implementation 'io.vrinda.kotlinpermissions:kotlinpermissions:1.1'
 
     // databinding
-    kapt 'com.android.databinding:compiler:2.3.2'
+    kapt 'com.android.databinding:compiler:3.1.0'
 
-    implementation 'com.android.support:recyclerview-v7:26.0.1'
 }
